@@ -6,7 +6,7 @@
     {
         public static int fieldSize = 0;
         public int detonatedMines = 0;
-        private char[,] positions = new char[fieldSize, fieldSize];
+        public char[,] positions = new char[fieldSize, fieldSize];
 
         public Battlefield()
         {
@@ -92,148 +92,16 @@
         {
             if (IsCellInRange(cellToDetonate))
             {
-                positions[cellToDetonate.YCoordinate, cellToDetonate.XCoordinate] = 'X';
+                positions[cellToDetonate.Y, cellToDetonate.X] = 'X';
             }
         }
 
-        public static bool IsCellInRange(Cell cell)
+        public bool IsCellInRange(Cell cell)
         {
-            bool isXCoordinateInRange = 0 <= cell.XCoordinate && cell.XCoordinate < fieldSize;
-            bool isYCoordinateInRange = 0 <= cell.YCoordinate && cell.YCoordinate < fieldSize;
+            bool isXCoordinateInRange = 0 <= cell.X && cell.X < fieldSize;
+            bool isYCoordinateInRange = 0 <= cell.Y && cell.Y < fieldSize;
 
             return isXCoordinateInRange && isYCoordinateInRange;
-        }
-
-        public struct Cell
-        {
-            public Cell(int xCoordinate, int yCoordinate)
-                : this()
-            {
-                this.XCoordinate = xCoordinate;
-                this.YCoordinate = yCoordinate;
-            }
-
-            public int XCoordinate { get; private set; }
-
-            public int YCoordinate { get; private set; }
-        }
-
-        public Cell[] GetDetonatedCells1(int xCoordinate, int yCoordinate)
-        {
-            Cell[] cellsToDetonate =
-            {
-                new Cell(xCoordinate - 1, yCoordinate - 1),
-                new Cell(xCoordinate + 1, yCoordinate - 1),
-                new Cell(xCoordinate, yCoordinate),
-                new Cell(xCoordinate - 1, yCoordinate + 1),
-                new Cell(xCoordinate + 1, yCoordinate + 1)
-            };
-
-            return cellsToDetonate;
-        }
-
-        public Cell[] GetDetonatedCells2(int xCoordinate, int yCoordinate)
-        {
-            Cell[] cellsToDetonate =
-            {
-                new Cell(xCoordinate - 1, yCoordinate - 1),
-                new Cell(xCoordinate, yCoordinate - 1), 
-                new Cell(xCoordinate + 1, yCoordinate - 1),
-                new Cell(xCoordinate - 1, yCoordinate), 
-                new Cell(xCoordinate, yCoordinate),
-                new Cell(xCoordinate + 1, yCoordinate), 
-                new Cell(xCoordinate - 1, yCoordinate + 1),
-                new Cell(xCoordinate, yCoordinate + 1), 
-                new Cell(xCoordinate + 1, yCoordinate + 1)
-            };
-
-            return cellsToDetonate;
-        }
-
-        public Cell[] GetDetonatedCells3(int xCoordinate, int yCoordinate)
-        {
-            Cell[] cellsToDetonate =
-            {
-                new Cell(xCoordinate, yCoordinate - 2), 
-                new Cell(xCoordinate - 1, yCoordinate - 1),
-                new Cell(xCoordinate, yCoordinate - 1), 
-                new Cell(xCoordinate + 1, yCoordinate - 1),
-                new Cell(xCoordinate - 2, yCoordinate),
-                new Cell(xCoordinate - 1, yCoordinate), 
-                new Cell(xCoordinate, yCoordinate),
-                new Cell(xCoordinate + 1, yCoordinate), 
-                new Cell(xCoordinate + 2, yCoordinate), 
-                new Cell(xCoordinate - 1, yCoordinate + 1),
-                new Cell(xCoordinate, yCoordinate + 1), 
-                new Cell(xCoordinate + 1, yCoordinate + 1),
-                new Cell(xCoordinate, yCoordinate + 2)
-            };
-
-            return cellsToDetonate;
-        }
-
-        public Cell[] GetDetonatedCells4(int xCoordinate, int yCoordinate)
-        {
-            Cell[] cellsToDetonate =
-            {
-                new Cell(xCoordinate - 1, yCoordinate - 2),
-                new Cell(xCoordinate, yCoordinate - 2),
-                new Cell(xCoordinate + 1, yCoordinate - 2), 
-                new Cell(xCoordinate - 2, yCoordinate - 1),
-                new Cell(xCoordinate - 1, yCoordinate - 1), 
-                new Cell(xCoordinate, yCoordinate - 1), 
-                new Cell(xCoordinate + 1, yCoordinate - 1), 
-                new Cell(xCoordinate + 2, yCoordinate - 1), 
-                new Cell(xCoordinate - 2, yCoordinate),
-                new Cell(xCoordinate - 1, yCoordinate), 
-                new Cell(xCoordinate, yCoordinate), 
-                new Cell(xCoordinate + 1, yCoordinate), 
-                new Cell(xCoordinate + 2, yCoordinate), 
-                new Cell(xCoordinate - 2, yCoordinate + 1),
-                new Cell(xCoordinate - 1, yCoordinate + 1), 
-                new Cell(xCoordinate, yCoordinate + 1), 
-                new Cell(xCoordinate + 1, yCoordinate + 1), 
-                new Cell(xCoordinate + 2, yCoordinate + 1), 
-                new Cell(xCoordinate - 1, yCoordinate + 2),
-                new Cell(xCoordinate, yCoordinate + 2),
-                new Cell(xCoordinate + 1, yCoordinate + 2)
-            };
-
-            return cellsToDetonate;
-        }
-
-        public Cell[] GetDetonatedCells5(int xCoordinate, int yCoordinate)
-        {
-            Cell[] cellsToDetonate =
-            {
-                new Cell(xCoordinate - 2, yCoordinate - 2),
-                new Cell(xCoordinate - 1, yCoordinate - 2),
-                new Cell(xCoordinate, yCoordinate - 2),
-                new Cell(xCoordinate + 1, yCoordinate - 2), 
-                new Cell(xCoordinate + 2, yCoordinate - 2),
-                new Cell(xCoordinate - 2, yCoordinate - 1),
-                new Cell(xCoordinate - 1, yCoordinate - 1), 
-                new Cell(xCoordinate, yCoordinate - 1), 
-                new Cell(xCoordinate + 1, yCoordinate - 1), 
-                new Cell(xCoordinate + 2, yCoordinate - 1), 
-                new Cell(xCoordinate - 2, yCoordinate),
-                new Cell(xCoordinate - 1, yCoordinate), 
-                new Cell(xCoordinate, yCoordinate), 
-                new Cell(xCoordinate + 1, yCoordinate), 
-                new Cell(xCoordinate + 2, yCoordinate), 
-                new Cell(xCoordinate - 2, yCoordinate + 1),
-                new Cell(xCoordinate - 1, yCoordinate + 1), 
-                new Cell(xCoordinate, yCoordinate + 1), 
-                new Cell(xCoordinate + 1, yCoordinate + 1), 
-                new Cell(xCoordinate + 2, yCoordinate + 1), 
-                new Cell(xCoordinate - 2, yCoordinate + 2),
-                new Cell(xCoordinate - 1, yCoordinate + 2),
-                new Cell(xCoordinate, yCoordinate + 2),
-                new Cell(xCoordinate + 1, yCoordinate + 2),
-                new Cell(xCoordinate + 2, yCoordinate + 2),
-            };
-
-            return cellsToDetonate;
         }
 
         public void DetonateMine(int xCoordinate, int yCoordinate)
@@ -243,19 +111,19 @@
             switch (this.positions[yCoordinate, xCoordinate] - '0')
             {
                 case 1:
-                    cellsToDetonate = GetDetonatedCells1(xCoordinate, yCoordinate);
+                    cellsToDetonate = PatternFactory.GenerateFirstDetonationPattern(xCoordinate, yCoordinate);
                     break;
                 case 2:
-                    cellsToDetonate = GetDetonatedCells2(xCoordinate, yCoordinate);
+                    cellsToDetonate = PatternFactory.GenerateSecondDetonationPattern(xCoordinate, yCoordinate);
                     break;
                 case 3:
-                    cellsToDetonate = GetDetonatedCells3(xCoordinate, yCoordinate);
+                    cellsToDetonate = PatternFactory.GenerateThirdDetonationPattern(xCoordinate, yCoordinate);
                     break;
                 case 4:
-                    cellsToDetonate = GetDetonatedCells4(xCoordinate, yCoordinate);
+                    cellsToDetonate = PatternFactory.GenerateFourthDetonationPattern(xCoordinate, yCoordinate);
                     break;
                 case 5:
-                    cellsToDetonate = GetDetonatedCells5(xCoordinate, yCoordinate);
+                    cellsToDetonate = PatternFactory.GenerateFifthDetonationPattern(xCoordinate, yCoordinate);
                     break;
                 default:
                     throw new Exception();
@@ -283,49 +151,6 @@
             }
 
             return count;
-        }
-
-        public static void Main(string[] args)
-        {
-            string tempFieldSize;
-            Console.WriteLine("Welcome to the Battle Field game");
-
-            do
-            {
-                Console.Write("Enter legal size of board: ");
-                tempFieldSize = Console.ReadLine();
-            } while ((!int.TryParse(tempFieldSize, out fieldSize)) || (fieldSize < 0) || (fieldSize > 11));
-
-            Battlefield bf = new Battlefield();
-            bf.InitField();
-            bf.InitMines();
-            bf.DisplayField();
-
-            do
-            {
-                Console.Write("Enter coordinates: ");
-                var coordinates = Console.ReadLine().Split();
-                var xCoordinate = int.Parse(coordinates[1]);
-                var yCoordinate = int.Parse(coordinates[0]);
-
-                Cell cellToExplode = new Cell(xCoordinate, yCoordinate);
-
-                while (!IsCellInRange(cellToExplode) || (bf.positions[yCoordinate, xCoordinate] == '-') || bf.positions[yCoordinate, xCoordinate] == 'X')
-                {
-                    Console.WriteLine("Invalid Move");
-                    Console.Write("Enter coordinates: ");
-                    coordinates = Console.ReadLine().Split();
-                    xCoordinate = int.Parse(coordinates[0]);
-                    yCoordinate = int.Parse(coordinates[1]);
-                }
-
-                bf.DetonateMine(xCoordinate, yCoordinate);
-                bf.DisplayField();
-                bf.detonatedMines++;
-            } while (bf.GetRemainingMinesCount() != 0);
-
-            Console.WriteLine("Game Over. Detonated Mines: " + bf.detonatedMines);
-            Console.ReadKey();
         }
     }
 }
